# ChangeLog for x11-libs/libfontenc
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libfontenc/ChangeLog,v 1.43 2008/01/31 04:32:00 dberkholz Exp $

  31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  -libfontenc-1.0.2.ebuild:
  Clean up.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  libfontenc-1.0.4.ebuild:
  Stable on sparc wrt #175465

  03 Jul 2007; Lars Weiler <pylon@gentoo.org> libfontenc-1.0.4.ebuild:
  Stable on ppc; bug #175465.

  02 Jul 2007; Raúl Porcel <armin76@gentoo.org> libfontenc-1.0.4.ebuild:
  alpha stable wrt #175465

  24 Jun 2007; Joshua Kinard <kumba@gentoo.org> libfontenc-1.0.4.ebuild:
  Stable on mips, per #175465.

  20 May 2007; Jeroen Roovers <jer@gentoo.org> libfontenc-1.0.4.ebuild:
  Stable for HPPA (bug #175465).

  04 May 2007; Daniel Gryniewicz <dang@gentoo.org> libfontenc-1.0.4.ebuild:
  Marked stable on amd64 for bug #175465

  29 Apr 2007; Andrej Kacian <ticho@gentoo.org> libfontenc-1.0.4.ebuild:
  Stable on x86, bug #175465.

  25 Apr 2007; Raúl Porcel <armin76@gentoo.org> libfontenc-1.0.4.ebuild:
  Stable on ia64 wrt bug #175465.

  25 Apr 2007; Markus Rothe <corsair@gentoo.org> libfontenc-1.0.4.ebuild:
  Stable on ppc64; bug #175465

  21 Apr 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  -libfontenc-1.0.3.ebuild:
  Clean out old version.

*libfontenc-1.0.4 (16 Dec 2006)

  16 Dec 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libfontenc-1.0.4.ebuild:
  Version bump for 7.2.  Build/dist fix only.

*libfontenc-1.0.3 (21 Oct 2006)

  21 Oct 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libfontenc-1.0.3.ebuild:
  Version bump.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> libfontenc-1.0.2.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> libfontenc-1.0.2.ebuild:
  Mark 1.0.2 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  libfontenc-1.0.2.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable
