@@ -1,4 +1,4 @@
 DIST libfontenc-1.0.4.tar.bz2 224063 RMD160 7a20977bb2cf382a22873053be98bcc9f0e76438 SHA1 69876a14b18c3c7c829cd79880c69db7b0732d9b SHA256 b993aa3d17e845a12a49160b5d96993059ce919c7ba902005b910b867b6258c8
-EBUILD libfontenc-1.0.4.ebuild 612 RMD160 03a4d49ec6abe22be3e5e11945de3205d216323f SHA1 d4afcbfc0bd6ee658092e5550365828e86867973 SHA256 d1b7609ddb93693eb450af91afe6910d43639aed5eeba30b7dae382154dcc44b
-MISC ChangeLog 5307 RMD160 9b9d3af8d4fff1d9a8b78fcc0452fcdf18984ea4 SHA1 e724fd79b0d23755c0fe57d1407c9245506258de SHA256 9422b06fbf5095916561f7d5de15888063b53af486ed6fa16fec5a8752537037
+EBUILD libfontenc-1.0.4.ebuild 651 RMD160 7c65ebd9ca76add4cdfc48a7e3bc3df4357ad982 SHA1 1bb72a389851d5fc6d177df979edbf2b8ce9566e SHA256 819a865d5975a592ae601d7974198f4ddbd728b45f25e7aca5223d5a742a2bfe
+MISC ChangeLog 5460 RMD160 d61388af25a1682083d6f4fe6ba58cc9a579ce47 SHA1 c518eebce744600e3d904b5a69cabe212a3941d3 SHA256 266c646bb0d7435990a49df0ccbeba797289b75a05dba50d19bfc9a90c920668
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
