@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libfontenc/libfontenc-1.0.4.ebuild,v 1.12 2009/05/05 07:57:49 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libfontenc/libfontenc-1.0.4.ebuild,v 1.13 2009/05/08 21:11:23 ssuominen Exp $
 
 # Must be before x-modular eclass is inherited
 # SNAPSHOT="yes"
@@ -12,6 +12,9 @@ KEYWORDS="~x64-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-maco
 IUSE=""
 
 RDEPEND="sys-libs/zlib"
-DEPEND="x11-proto/xproto"
+DEPEND="${RDEPEND}
+	x11-proto/xproto"
 
-CONFIGURE_OPTIONS="--with-encodingsdir=/usr/share/fonts/encodings"
+pkg_setup() {
+	CONFIGURE_OPTIONS="--with-encodingsdir=${EPREFIX}/usr/share/fonts/encodings"
+}
